# xlab

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  SKILL.md  TASKS.md  mkdocs.yml
cc/ccbench/bench/: CMakeLists.txt  bench_cpu_performance.cpp  bench_memory_cache1.cpp  bench_memory_cache2.cpp  bench_meomory_width.cpp  bench_pointer.cpp  bench_string.cpp
cc/ccbench/bench/common/: bench_v2.cpp  bench_v2.h
cc/ccbench/bench/include/: fwd.h
cc/ccbench/bench/utils/: default_init_default.h
cc/cclab/: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  RULES.md  TASKS.md  TODOS.md  build.sh
cc/cclab/bench/: CMakeLists.txt  bench_cpu_performance.cc  bench_cpu_performance.cpp  bench_memory_cache.cc  bench_memory_cache.cpp  benchmark_allocator.cpp  benchmark_basic.cpp
cc/cclab/docs/api/: README.md
cc/cclab/docs/architecture/: README.md
cc/cclab/main/: CMakeLists.txt  consistent_hash.cpp  consistent_hash.h  data_align.h  main.cpp
cc/cclab/src/: CMakeLists.txt  main.cc  main.cpp
cc/cclab/src/bench/: CMakeLists.txt  bench_basic.cpp
cc/cclab/src/common/: CMakeLists.txt  consistent_hash.cc  consistent_hash.cpp  consistent_hash.h  coroutine.h  cow.h  mpmc_queue.h
cc/cclab/src/experiment/: CMakeLists.txt  helloworld.cc
cc/cclab/src/utils/: data_struct.h  default_init_default.h  defer.h  env.h  env_var.h  filepath_op.h  foo.h  hash.h  lru.hpp  machine_op.h  noncopyable.h  os_exec_op.h  process_op.h  shared_ptr_multi_thread.h  sync_once.h  task_thread.h  thread_group.h  thread_pool.h  wait_event_counter.h
cc/cclab/test/: CMakeLists.txt  abseil_test.cpp  allocator_test.cpp  basic_test.cc  basic_test.cpp  consistent_hash_test.cpp  lock_problem.cpp  lock_problem_dining.cpp  mpmc_queue.cpp  mpmc_queue.h  mpmc_queue_test.cpp  shared_ptr_test.cpp  skiplist_v2_test.cc  skiplist_v2_test.cpp  string_test.cpp  thread_test.cpp
cc/cclab/test/common/: CMakeLists.txt  abseil_test.cc  atomic_test.cc  basic_test.cc  boost_test.cc  bplusplustree_test.cc  bthread_test.cc  btree_test.cc  class_test.cc  column_test.cc  consistent_hash_test.cc  coroutine_test.cc  coroutine_test1.cc  coroutine_test2.cc  data_test.cc  double_test.cc  enum_test.cc  foo_test.cc  lock_problem.cc  lock_problem_dining.cc  math_test.cc  mpmc_queue_test.cc  range_test.cc  robin_hood_map_test.cc  shared_ptr_test.cc  simd_test.cc  skiplist_test.cc  skiplist_v2_test.cc  string_test.cc  template_test.cc  thread_test.cc  utils_test.cc
cc/cclab/test/interview/: CMakeLists.txt  interview1_test.cc  interview2_test.cc  interview_test.cc  leetcode_1115.cc  leetcode_1116.cc  leetcode_1117.cc  leetcode_1195.cc  leetcode_1226.cc  leetcode_208.cc
cc/cclab/test/tools/: CMakeLists.txt  libunwind_test.cc  mem_test.cc  mem_test1.cc  my_test.cc  strcmp_bench.cc  t1.cc  test_tool1.cc
cc/cclab/test/utils/: CMakeLists.txt  defer_test.cc  env_var_test.cc  ll_parser_test.cc  os_exec_op_test.cc  simd_test.cc  task_thread_test.cc
cc/projects/cpython/skiplist-extention/: CMakeLists.txt  build.sh  build_extention.sh  setup.py
cc/projects/kv-store/: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  RULES.md  SUMMARY.md  TASKS.md  TODOS.md  claude.md  test_arena  test_arena.cpp  test_node  test_node.cpp  test_skiplist  test_skiplist.cpp
cc/projects/llvm-jit/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cc/projects/llvm-jit/benchmarks/: CMakeLists.txt  CTestTestfile.cmake  LLVMJitExprFusion_benchmark  Makefile  benchmark_main.cpp  cmake_install.cmake
cc/projects/llvm-jit/include/: M0_JITSetup.h  M1_AST.h  Utils.h
cc/projects/llvm-jit/src/: CMakeLists.txt  M0_JITSetup.cpp  M1_AST.cpp  Makefile  cmake_install.cmake  main.cpp
cc/projects/llvm-jit/test/: ASTTest.cpp  CMakeLists.txt  CTestTestfile.cmake  LLVMJitExprFusion_test  Makefile  cmake_install.cmake
cc/projects/mini-seastar/: AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RULES.md  TODOS.md
cc/projects/mini-seastar/docs/: PHASE1_SUMMARY.md
cc/projects/mini-seastar/examples/: 01_coro_demo.cpp  (+3 more)
cc/projects/query-engine/: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  README.md  RULES.md  TASKS.md  TODOS.md  claude.md
cc/projects/thread-pool/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  README.md  RULES.md  TODOS.md  claude.md
cc/projects/web-server/: AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RULES.md  TODOS.md
cc/srlab/: .gitignore  CMakeLists.txt  README.md  build.sh
cc/srlab/cmake/: ThirdpartyConfig.cmake
cc/srlab/data/: v1.jstack
cc/srlab/scripts/: class_clangd.py
cc/srlab/src/: main.cpp
cc/srlab/tests/: CMakeLists.cmake  CMakeLists.txt  test_arrow.cpp  test_boost.cpp  test_folly.cpp
cc/tools/src/: CMakeLists.txt
haskell/projects/dsl-transform/: DESIGN.md  DESIGN_BUILD_TEST_DOC.md  dsl-transform.cabal
haskell/projects/sql-parser/: IMPLEMENTATION.md  README.md  sql-parser.cabal  stack.yaml
python/projects/db-radar/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
python/projects/db-report/: .env.example  .env.mock  Makefile  README.md  pyproject.toml
python/projects/invest-ai/: ARCHITECTURE_DESIGN.md  IMPLEMENTATION_SUMMARY.md  pyproject.toml
python/projects/py-cli/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RULES.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/projects/py-email/: .gitignore  AGENTS.md  CHANGELOG.md  CHANGE_LOGS.md  CLAUDE.md  CLAUDE_v1.md  ISSUES.md  README.md  RULES.md  TODOS.md  digest-2026-03-23.html  pyproject.toml
python/projects/py-pia/: CLAUDE.md  ISSUES.md  README.md  TASK.md  pyproject.toml
rust/rdb/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RULES.md  TODOS.md
rust/rdb/src/: main.rs
rust/rlab/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RULES.md  TODOS.md
rust/rlab/leetcode/: Cargo.toml
rust/rlab/src/: addr2line.rs  examples.rs  lib.rs  main.rs
rust/rlab/tests/: test_async.rs  test_basic.rs  test_examples.rs  test_lib_b.rs  test_sort.rs  test_tokio.rs  test_traits.rs
(+2961 files in other folders)
