[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
roaring = "0.10"
bytes = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"
lz4_flex = "0.10"
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
async-trait = "0.1"
async-recursion = "1.0"
bincode = "1.3"