[workspace]
members = [
    "lib/rlab",
    "tools/rlab-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rlab"

[workspace.dependencies]
# Common dependencies that might be shared
fastrand = "2.0"
anyhow = "1.0"
