message(STATUS "link_libs=${link_libs}")

function(add_directory_tests dir)
    file(GLOB TEST_SOURCES "${dir}/*.cc")
    get_filename_component(target_name "${dir}" NAME)
    set(test_target "${target_name}_test")
    add_executable(${test_target} ${TEST_SOURCES})
    target_link_libraries(${test_target} ${link_libs} PRIVATE common pthread gtest absl::node_hash_map Threads::Threads)
    add_test(NAME ${test_target} COMMAND ${test_target})
endfunction()

function(add_directory_for_each_test dir)
    file(GLOB TEST_SOURCES "${dir}/*.cc")
    get_filename_component(target_name "${dir}" NAME)
    # set(test_target "${target_name}_test")
    # add_executable(${test_target} ${TEST_SOURCES})
    # target_link_libraries(${test_target} ${link_libs} PRIVATE common pthread gtest absl::node_hash_map Threads::Threads)
    # add_test(NAME ${test_target} COMMAND ${test_target})
    foreach (src ${TEST_SOURCES})
        get_filename_component(exe tools_${src} NAME_WE)
        add_executable(${exe} ${src} )
        # target_include_directories(${exe} PRIVATE "../../thirdparty")
        target_link_libraries(${exe} ${link_libs} PRIVATE common pthread gtest absl::node_hash_map Threads::Threads)
        list(APPEND ${target_name}_tests ${exe})
    endforeach()
    add_custom_target(${target_name}_tests DEPENDS ${target_name}_tests)
endfunction()

add_subdirectory(common)
add_subdirectory(utils)
add_subdirectory(interview)
add_subdirectory(tools)
